Fix 7.x compilation.